[OfflinePages] Fixes RequestCoordinator bug not clearing state on timeout

Factors out some OfflinerDoneCallback logic so that it may be used for handling timeout case.

BUG=663948

Review-Url: https://codereview.chromium.org/2493683002
Cr-Commit-Position: refs/heads/master@{#431638}

Former-commit-id: 5d66b4a41712bb24405cc261ea0ada34c4ee9eb6